@@ -27,54 +27,66 @@ public class WrongAnswerStoryService {
                 .orElseThrow(() -> new RuntimeException("로그인 유저를 찾을 수 없습니다."));
     }
 
-    /** AI 스토리 생성 후 저장 (최종 엔티티 생성) */
+    /** ✅ AI 스토리 생성 후 저장 (영문 + 한글 제목 모두 저장) */
     @Transactional
-    public WrongAnswerStory createStory(String title, String storyEn, String storyKo, List<Long> wrongLogIds) {
-
+    public WrongAnswerStory createStory(
+            String title,
+            String titleKo,
+            String storyEn,
+            String storyKo,
+            List<Long> wrongLogIds
+    ) {
         User user = getLoginUser();
 
-        // 1) WrongAnswerStory 저장
-        WrongAnswerStory story = WrongAnswerStory.create(user, title, storyEn, storyKo);
+        // 1) 스토리 저장
+        WrongAnswerStory story = WrongAnswerStory.create(
+                user,
+                title,
+                titleKo,
+                storyEn,
+                storyKo
+        );
         wrongAnswerStoryRepository.save(story);
 
-        // 2) StoryWordList 연관 엔티티 저장 (WORD_ID + WRONG_WORD_ID 둘 다 저장)
+        // 2) StoryWordList 저장
         for (Long wrongLogId : wrongLogIds) {
             wrongAnswerLogRepository.findById(wrongLogId)
                     .ifPresent(log -> {
-                        Long wordId = log.getWord().getWordId();  // WORD_ID 추출
                         StoryWordList relation = StoryWordList.create(
                                 story.getStoryId(),
-                                wordId,        // WORD_ID (히스토리 보존)
-                                wrongLogId     // WRONG_WORD_ID (오답 추적)
+                                log.getWord().getWordId(),
+                                wrongLogId
                         );
                         storyWordListRepository.save(relation);
                     });
         }
 
-        // 3) WrongAnswerLog = isUsedInStory = true 업데이트
+        // 3) 오답 로그 사용 처리
         wrongAnswerLogRepository.findAllById(wrongLogIds)
-                .forEach(log -> log.markUsedInStory());
+                .forEach(WrongAnswerLog::markUsedInStory);
 
         return story;
     }
 
-    /** 스토리 목록 (keywords 포함) */
+    /** 스토리 목록 조회 */
     @Transactional(readOnly = true)
     public List<StoryListResponse> getMyStories() {
         User user = getLoginUser();
         List<WrongAnswerStory> stories = wrongAnswerStoryRepository.findByUser(user);
-        
+
         return stories.stream()
                 .map(story -> {
-                    List<String> keywords = storyWordListRepository.findByStoryIdWithWord(story.getStoryId())
+                    List<String> keywords = storyWordListRepository
+                            .findByStoryIdWithWord(story.getStoryId())
                             .stream()
                             .map(swl -> swl.getWord().getWord())
-                            .filter(word -> word != null && !word.trim().isEmpty())
+                            .filter(word -> word != null && !word.isBlank())
                             .collect(Collectors.toList());
-                    
+
                     return StoryListResponse.builder()
                             .storyId(story.getStoryId())
-                            .title(story.getTitle())
+                            .title(story.getTitle())       // 영어 제목
+                            .titleKo(story.getTitleKo())   // 한글 제목
                             .storyEn(story.getStoryEn())
                             .storyKo(story.getStoryKo())
                             .createdAt(story.getCreatedAt())
@@ -85,35 +97,49 @@ public class WrongAnswerStoryService {
     }
 
     /** 스토리 상세 조회 */
-    public WrongAnswerStory getStoryDetail(Long storyId) {
-        return wrongAnswerStoryRepository.findById(storyId)
+    @Transactional(readOnly = true)
+    public StoryListResponse getStoryDetail(Long storyId) {
+
+        WrongAnswerStory story = wrongAnswerStoryRepository.findById(storyId)
                 .orElseThrow(() -> new RuntimeException("스토리를 찾을 수 없습니다."));
+
+        List<String> keywords = storyWordListRepository
+                .findByStoryIdWithWord(storyId)
+                .stream()
+                .map(swl -> swl.getWord().getWord())
+                .filter(word -> word != null && !word.isBlank())
+                .collect(Collectors.toList());
+
+        return StoryListResponse.builder()
+                .storyId(story.getStoryId())
+                .title(story.getTitle())       // 영어 제목
+                .titleKo(story.getTitleKo())   // 한글 제목
+                .storyEn(story.getStoryEn())
+                .storyKo(story.getStoryKo())
+                .createdAt(story.getCreatedAt())
+                .keywords(keywords)
+                .build();
     }
 
-    /** 스토리에 사용된 오답 목록 조회 (Word 엔티티 함께 로딩) */
+    /** 오답 단어 조회 */
     @Transactional(readOnly = true)
     public List<StoryWordList> getWrongWordsInStory(Long storyId) {
-        // FETCH JOIN을 사용하여 Word 엔티티를 함께 로딩 (LAZY 로딩 문제 해결)
         return storyWordListRepository.findByStoryIdWithWord(storyId);
     }
-    /** ⭐ 스토리 삭제 */
+
+    /** 스토리 삭제 */
     @Transactional
     public void deleteStory(Long storyId) {
-
         User user = getLoginUser();
 
         WrongAnswerStory story = wrongAnswerStoryRepository.findById(storyId)
                 .orElseThrow(() -> new RuntimeException("스토리를 찾을 수 없습니다."));
 
-        // 본인 스토리인지 검증
         if (!story.getUser().getUserId().equals(user.getUserId())) {
             throw new RuntimeException("본인 스토리만 삭제할 수 있습니다.");
         }
 
-        // ⭐ 1) StoryWordList 먼저 삭제 (FK 문제 해결)
         storyWordListRepository.deleteByStoryId(storyId);
-
-        // ⭐ 2) 스토리 삭제
         wrongAnswerStoryRepository.delete(story);
     }
 }
